--- a/restaurant.html
+++ b/restaurant.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="/img/icon/logo_Fav_Icon.svg" />
     <script src="js/auth.js" defer></script>
     <script src="js/menu.js" defer></script>
+    <script src="js/cart.js" defer></script>
   </head>
 
   <body>
@@ -52,14 +53,10 @@
         <section class="menu">
           <div class="section-heading">
             <h2 class="section-title restaurant-title">Пицца Плюс</h2>
-            <div class="card-info">
-              
-            </div>
+            <div class="card-info"></div>
             <!-- /.card-info -->
           </div>
-          <div class="cards cards-menu">
-            
-          </div>
+          <div class="cards cards-menu"></div>
           <!-- /.cards -->
         </section>
       </div>
@@ -100,53 +97,14 @@
           <button class="close">&times;</button>
         </div>
         <!-- /.modal-header -->
-        <div class="modal-body">
-          <div class="food-row">
-            <span class="food-name">Ролл угорь стандарт</span>
-            <strong class="food-price">250 ₽</strong>
-            <div class="food-counter">
-              <button class="counter-button">-</button>
-              <span class="counter">1</span>
-              <button class="counter-button">+</button>
-            </div>
-          </div>
-          <!-- /.foods-row -->
-          <div class="food-row">
-            <span class="food-name">Ролл угорь стандарт</span>
-            <strong class="food-price">250 ₽</strong>
-            <div class="food-counter">
-              <button class="counter-button">-</button>
-              <span class="counter">1</span>
-              <button class="counter-button">+</button>
-            </div>
-          </div>
-          <!-- /.foods-row -->
-          <div class="food-row">
-            <span class="food-name">Ролл угорь стандарт</span>
-            <strong class="food-price">250 ₽</strong>
-            <div class="food-counter">
-              <button class="counter-button">-</button>
-              <span class="counter">1</span>
-              <button class="counter-button">+</button>
-            </div>
-          </div>
-          <!-- /.foods-row -->
-          <div class="food-row">
-            <span class="food-name">Ролл угорь стандарт</span>
-            <strong class="food-price">250 ₽</strong>
-            <div class="food-counter">
-              <button class="counter-button">-</button>
-              <span class="counter">1</span>
-              <button class="counter-button">+</button>
-            </div>
-          </div>
-          <!-- /.foods-row -->
-        </div>
+        <div class="modal-body"></div>
         <!-- /.modal-body -->
         <div class="modal-footer">
           <span class="modal-pricetag">1250 ₽</span>
           <div class="footer-buttons">
-            <button class="button button-primary">Оформить заказ</button>
+            <button class="button button-primary button-order">
+              Оформить заказ
+            </button>
             <button class="button clear-cart">Отмена</button>
           </div>
         </div>
@@ -164,6 +122,7 @@
             <label class="label-auth">
               <span>Логин</span>
               <input id="login" type="text" />
+              <span class="error"></span>
             </label>
             <label class="label-auth">
               <span>Пароль</span>
